# ADiKtEd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
cmake/: SlangDependency.cmake  examples.cmake  libadiktedConfig.cmake.in
cmake/slang/: BuildSlangMingw.cmake  BuildSlangUnix.cmake  StageSlangMingw.cmake
cmake/slang/mingw/: libslang_private.rc
libadikted/: CMakeLists.txt  globals.h  lev_script.c  libadikted.pc.in
mapslang/: CMakeLists.txt
tools/ci/: package_artifacts.py
